--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "the-restaurant-mobile",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.23",
-    "expo-status-bar": "~3.0.8",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "expo": "~54.0.0",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.9",
+    "expo-status-bar": "~3.0.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "expo-module-scripts": "^5.0.7",
+    "typescript": "~5.9.2"
+  }
 }
